# scoopwhoop-postgen

./: .gitignore  packages.txt  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
src/: agents.py  clients.py  prompts.py  utils.py
src/grafana_logger/: app.py
src/services/: mongo_client.py  rapidapi.py
src/templates/: __init__.py
src/templates/bws/: post.py  reel.py  static_carousel.py
src/templates/desi_standup/: reel.py
src/templates/gls/: headline.py  thumbnail.py  thumbnail_4.py
src/templates/indian_standup/: reel.py  tweet_image.py
src/templates/infomance/: content.py  thumbnail.py  thumbnail_3.py
src/templates/laughter_colors/: headline.py
src/templates/marketing_stories/: ad_reel.py  carousel.py  headline.py  meme_reel.py
src/templates/scoopwhoop/: biz.py  body.py  cultural_pieces.py  meme.py  opinion_pieces.py  ranking.py  reel.py  reel_1.py  text_based.py  text_based_1.py  text_based_2.py  text_based_3.py  text_based_4.py  thumbnail.py  timeline.py  writeup.py
src/templates/smart_india_news/: thumbnail.py
src/templates/social_village/: content.py  reel.py  thumbnail.py  thumbnail_2.py
src/templates/startuptalksindia/: reel.py  thumbnail.py
src/templates/the_dope_indian/: writeup.py
src/templates/the_indian_idiot/: headline.py
src/templates/the_sarcastic_indian/: writeup.py
src/workflows/: content_creator.py  editor_utils.py  editors.py  image_gen.py  sources.py  tweet_creator.py
streamlit_pages/: generate_page.py  history_page.py  logger_config.py  page_editor.py  sources_page.py  tweet_page.py
(+13 files in other folders)
