[project]
name = "scoopwhoop-postgen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.58.2",
    "awscli-local>=0.22.2",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "google-genai>=1.27.0",
    "google-generativeai>=0.8.5",
    "google-search-results>=2.4.2",
    "moviepy>=2.2.1",
    "numpy>=2.3.1",
    "openai>=1.97.1",
    "pandas>=2.3.1",
    "pillow>=10.0.0",
    "playwright>=1.54.0",
    "pymongo>=4.6.1",
    "selenium>=4.34.2",
    "streamlit>=1.28.0",
    "requests>=2.25.1",
    "dnspython>=2.7.0",
]
